--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "debugpy>=1.8.12",
+    "opencv-python>=4.11.0.86",
+    "pyserial>=3.5",
+]
